--- a/Hide&ShowPw/index.html
+++ b/Hide&ShowPw/index.html
@@ -14,8 +14,8 @@
         <script>
             let eyeicon = document.getElementById('eyeicon');
             let password = document.getElementById('password');
-            eyeicon.onclick = function () {
-                if (password.type == 'password') {
+            eyeicon.onclick = () => {
+                if (password.type === 'password') {
                     password.type = 'text';
                     eyeicon.src = 'images/eye-open.png';
                 } else {
