--- a/DarkThemeToggle/index.html
+++ b/DarkThemeToggle/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="hero">
             <nav>
-                <img src="images/logo.png" alt="" class="logo" />
+                <img src="images/logo.png"  class="logo" />
                 <ul>
                     <li>
                         <a href="">HOME</a>
